app/ui/demo/demo.module.css
.demoApp {
  /* border: 1px solid green; */
  padding: 1rem;
  display: flex;
  height: 100vh;
  gap: 1rem;
}

.demoMain {
  /* border: 1px solid purple; */
  flex: 8;
}

.sideNav {
  /* border: 1px solid orange; */
  flex: 2;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.logoLink {
  /* border: 1px solid red; */
  border-radius: 0.5rem;
  padding: 0.618rem;
  display: flex;
  align-items: center;
  gap: 0.5rem;
  font-size: 1.5rem;
  min-width: 12rem;
  background-color: var(--bg-gray-50);
}

.navLink {
  /* border: 1px solid blue; */
  border-radius: 0.5rem;
  padding: 0.5rem 1rem;
  display: flex;
  align-items: center;
  gap: 0.5rem;
  background-color: var(--bg-gray-50);
}

